Extrude Tool Regression: Arrow gizmo always uses normal direction #95029

Closed
opened 2022-01-18 17:24:36 +01:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-17 07:12, hash: e1e3043a51
Worked: Blender 2.92

Short description of error
This is regression I noticed for the Extrude Tool in the toolbar. The default setting it uses is "Normal" but it can also be set to "XZY".
In that case it will get a different gizmo. After extruding at least once an additional gizmo will appear to adjust the most recent extrusion.
Blender 2.92 is the last release where it would actually adjust the location of the extruded element along the same direction the extrude operation used. (For example along the x-axis after extruding along the x-axis)
In the recent Blender version it will always move along the original normal direction, regardless of the settings used or the direction that the extrude operation happened.

Exact steps for others to reproduce the error

  • Go into edit mode
  • Make the Extrude tool active in the toolbar
  • Switch the setting to XYZ in the tool settings
  • Extrude a face along the x-axis using the gizmo
  • Use the yellow arrow gizmo to adjust the position of the face
**System Information** Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-17 07:12, hash: `e1e3043a51` Worked: Blender 2.92 **Short description of error** This is regression I noticed for the Extrude Tool in the toolbar. The default setting it uses is "Normal" but it can also be set to "XZY". In that case it will get a different gizmo. After extruding at least once an additional gizmo will appear to adjust the most recent extrusion. Blender 2.92 is the last release where it would actually adjust the location of the extruded element along the same direction the extrude operation used. (For example along the x-axis after extruding along the x-axis) In the recent Blender version it will **always** move along the original normal direction, regardless of the settings used or the direction that the extrude operation happened. **Exact steps for others to reproduce the error** - Go into edit mode - Make the Extrude tool active in the toolbar - Switch the setting to XYZ in the tool settings - Extrude a face along the x-axis using the gizmo - Use the yellow arrow gizmo to adjust the position of the face
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 9506dcf675

This issue was referenced by 9506dcf6758b4df7b01700c3f9cc61d05d93b50e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-01-18 20:22:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95029
No description provided.